# cpp_project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile
scripts/: linux_build.sh  linux_run.sh  run_unix.sh  windows_build.ps1  windows_run.ps1
src/: CMakeLists.txt  calculator_app.cpp  hello_app.cpp  hello_world_app.cpp
src/calculator/: CMakeLists.txt  calculator.cpp  calculator.h
src/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.h
tests/: CMakeLists.txt  test_calculator.cpp  test_hello_world.cpp
